Connect wallet to nav bar

--- a/TransitHub/Views/Shared/_Layout.cshtml
+++ b/TransitHub/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                         </div>
                         <div style="display:flex;justify-content:center;align-items:center;">Store</div>
                     </a>
-                    <a href="/Home">
+                    <a href="/Wallet">
                         <div style="display:flex;justify-content:center;align-items:center;">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-cash" viewBox="0 0 16 16">
                                 <path d="M8 10a2 2 0 1 0 0-4 2 2 0 0 0 0 4z" />
