--- a/TransitHub/Views/Shared/_Layout.cshtml
+++ b/TransitHub/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
                         </div>
                         <div style="display:flex;justify-content:center;align-items:center;">Tickets</div>
                     </a>
-                    <a href="/Home">
+                    <a href="/Help">
                         <div style="display:flex;justify-content:center;align-items:center;">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-question-circle" viewBox="0 0 16 16">
                                 <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
