Added down arrows to help index

--- a/TransitHub/Views/Help/Index.cshtml
+++ b/TransitHub/Views/Help/Index.cshtml
@@ -1,132 +1,159 @@
 ﻿@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
-@{
-}
 
 <section>
-    <div class="container">
-        <h1>Customer Service</h1>
-        <ul class="list_container">
-            <li class="header">General Inquiries</li>
-            <li class="header_sub">403-262-1000</li>
-            <li class="header_sub">(TTY) 403-262-8087</li>
-        </ul>
-        <ul class="list_container">
-            <li class="header">Lost Property</li>
-            <li class="header_sub">403-268-1600</li>
-        </ul>
-    </div>
-    <div class="container">
-        <h1>Useful Links</h1>
-        <ul class="list_container">
-            <li class="header"><a href="https://www.calgarytransit.com/home.html">Calgary Transit Homepage</a></li>
-        </ul>
-        <ul class="list_container">
-            <li class="header"><a href="https://www.calgarytransit.com/content/transit/en/home/contact-us/submit-a-request-online.html">Feedback</a></li>
-        </ul>
-    </div>
-    <div class="container">
-        <h1>FAQ</h1>
-        <div class="accordion-item" id="section1">
-            <a href="#section1" class="accordion-label">
-                Which mobile devices can run this app?
-            </a>
-            <div class="accordion-content">
-                <p>
-                    The application is available for iOS and Andriod devices.
-                </p>
+    <body>
+        <div class="container">
+            <h1>Customer Service</h1>
+            <ul class="list_container">
+                <li class="header">General Inquiries</li>
+                <li class="header_sub">403-262-1000</li>
+                <li class="header_sub">(TTY) 403-262-8087</li>
+            </ul>
+            <ul class="list_container">
+                <li class="header">Lost Property</li>
+                <li class="header_sub">403-268-1600</li>
+            </ul>
+        </div>
+        <div class="container">
+            <h1>Useful Links</h1>
+            <ul class="list_container">
+                <li class="header"><a href="https://www.calgarytransit.com/home.html">Calgary Transit Homepage</a></li>
+            </ul>
+            <ul class="list_container">
+                <li class="header"><a href="https://www.calgarytransit.com/content/transit/en/home/contact-us/submit-a-request-online.html">Feedback</a></li>
+            </ul>
+        </div>
+        <div class="container">
+            <h1>FAQ</h1>
+            <div class="accordion-item" id="section1">
+                <a href="#section1" class="accordion-label">
+                    Which mobile devices can run this app?
+                    
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-down-fill" viewBox="0 0 16 16">
+                            <path d="M7.247 11.14L2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z" />
+                        </svg>
+                 
+                </a>
+                <div class="accordion-content">
+                    <p>
+                        The application is available for iOS and Andriod devices.
+                    </p>
+                </div>
+            </div>
+            <div class="accordion-item" id="section2">
+                <a href="#section2" class="accordion-label">
+                    What type of fares are available for purchase?    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-down-fill" viewBox="0 0 16 16">
+                        <path d="M7.247 11.14L2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z" />
+                    </svg>
+                </a>
+                <div class="accordion-content">
+                    <p>The tickets (Adult, Youth), montlhy pass (Adult, Youth), special pass (Seniors, Low-Income for Adult, Senior, and Youth)</p>
+                </div>
+            </div>
+            <div class="accordion-item" id="section3">
+                <a href="#section3" class="accordion-label">
+                    How do I update my user information?    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-down-fill" viewBox="0 0 16 16">
+                        <path d="M7.247 11.14L2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z" />
+                    </svg>
+                </a>
+                <div class="accordion-content">
+                    <p>Select Account on the navigation bar at the bottom then select Account. Edit the information and select Save Changes.</p>
+                </div>
+            </div>
+            <div class="accordion-item" id="section4">
+                <a href="#section4" class="accordion-label">
+                    How do I update my password?    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-down-fill" viewBox="0 0 16 16">
+                        <path d="M7.247 11.14L2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z" />
+                    </svg>
+                </a>
+                <div class="accordion-content">
+                    <p>Select Account on the navigation bar at the bottom then select Security. Enter your new password and select Update.</p>
+                </div>
+            </div>
+            <div class="accordion-item" id="section5">
+                <a href="#section5" class="accordion-label">
+                    How do I vertify my account to purchase special passes?    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-down-fill" viewBox="0 0 16 16">
+                        <path d="M7.247 11.14L2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z" />
+                    </svg>
+                </a>
+                <div class="accordion-content">
+                    <p>Select Account on the navigation bar at the bottom then select Vertification. Enter your given registeration number from Calgary Transit. Either take a picture of your identification card or upload a picture of your identification card from your mobile phone's gallery. Select Save Changes.</p>
+                </div>
+            </div>
+            <div class="accordion-item" id="section6">
+                <a href="#section6" class="accordion-label">
+                    What forms of payment can I use?    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-down-fill" viewBox="0 0 16 16">
+                        <path d="M7.247 11.14L2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z" />
+                    </svg>
+                </a>
+                <div class="accordion-content">
+                    <p>TransitHub accepts credit cards (MasterCard and Visa), pre-paid credit cards, Apple Pay, and PayPal.</p>
+                </div>
+            </div>
+            <div class="accordion-item" id="section7">
+                <a href="#section7" class="accordion-label">
+                    How do I update my payment information?    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-down-fill" viewBox="0 0 16 16">
+                        <path d="M7.247 11.14L2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z" />
+                    </svg>
+                </a>
+                <div class="accordion-content">
+                    <p>Select Account on the navigation bar at the bottom then select Payment Information. To remove your current payment method(s), select Saved Cards then the payment method you would like to remove by selecting Yes. To add a card to your account, select Add Card.</p>
+                </div>
+            </div>
+            <div class="accordion-item" id="section8">
+                <a href="#section8" class="accordion-label">
+                    Are receipts avaliable for my purchases?    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-down-fill" viewBox="0 0 16 16">
+                        <path d="M7.247 11.14L2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z" />
+                    </svg>
+                </a>
+                <div class="accordion-content">
+                    <p>Yes. You can view your recepits on the app. Select Account on the navigation bar at the bottom then select Purchase History.</p>
+                </div>
+            </div>
+            <div class="accordion-item" id="section9">
+                <a href="#section9" class="accordion-label">
+                    Can I refund a purchased ticket or pass?    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-down-fill" viewBox="0 0 16 16">
+                        <path d="M7.247 11.14L2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z" />
+                    </svg>
+                </a>
+                <div class="accordion-content">
+                    <p>Refunds are available for all tickets and passes. You will be given only 3 minutes to refund your purchase. To refund your ticket or pass, find the fare you would like to refund in My Tickets and then click on it and select Refund.</p>
+                </div>
+            </div>
+            <div class="accordion-item" id="section10">
+                <a href="#section10" class="accordion-label">
+                    How do I know when my ticket or pass will expire?    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-down-fill" viewBox="0 0 16 16">
+                        <path d="M7.247 11.14L2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z" />
+                    </svg>
+                </a>
+                <div class="accordion-content">
+                    <p>In My Tickets, under each fare, there is an expiration date and time listed.</p>
+                </div>
+            </div>
+            <div class="accordion-item" id="section11">
+                <a href="#section11" class="accordion-label">
+                    How do I activate my ticket or pass?    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-down-fill" viewBox="0 0 16 16">
+                        <path d="M7.247 11.14L2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z" />
+                    </svg>
+                </a>
+                <div class="accordion-content">
+                    <p>Your ticket or pass will automatically activate when scanned.</p>
+                </div>
+            </div>
+            <div class="accordion-item" id="section12">
+                <a href="#section12" class="accordion-label">
+                    How do I display my ticket?    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-down-fill" viewBox="0 0 16 16">
+                        <path d="M7.247 11.14L2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z" />
+                    </svg>
+                </a>
+                <div class="accordion-content">
+                    <p>Select My Tickets at the bottom of the navigation bar and tap on the fare you would like to use.</p>
+                </div>
             </div>
         </div>
-        <div class="accordion-item" id="section2">
-            <a href="#section2" class="accordion-label">
-                What type of fares are available for purchase?
-            </a>
-            <div class="accordion-content">
-                <p>The tickets (Adult, Youth), montlhy pass (Adult, Youth), special pass (Seniors, Low-Income for Adult, Senior, and Youth)</p>
-            </div>
-        </div>
-        <div class="accordion-item" id="section3">
-            <a href="#section3" class="accordion-label">
-                How do I update my user information?
-            </a>
-            <div class="accordion-content">
-                <p>Select Account on the navigation bar at the bottom then select Account. Edit the information and select Save Changes.</p>
-            </div>
-        </div>
-        <div class="accordion-item" id="section4">
-            <a href="#section4" class="accordion-label">
-                How do I update my password?
-            </a>
-            <div class="accordion-content">
-                <p>Select Account on the navigation bar at the bottom then select Security. Enter your new password and select Update.</p>
-            </div>
-        </div>
-        <div class="accordion-item" id="section5">
-            <a href="#section5" class="accordion-label">
-                How do I vertify my account to purchase special passes?
-            </a>
-            <div class="accordion-content">
-                <p>Select Account on the navigation bar at the bottom then select Vertification. Enter your given registeration number from Calgary Transit. Either take a picture of your identification card or upload a picture of your identification card from your mobile phone's gallery. Select Save Changes.</p>
-            </div>
-        </div>
-        <div class="accordion-item" id="section6">
-            <a href="#section6" class="accordion-label">
-                What forms of payment can I use?
-            </a>
-            <div class="accordion-content">
-                <p>TransitHub accepts credit cards (MasterCard and Visa), pre-paid credit cards, Apple Pay, and PayPal.</p>
-            </div>
-        </div>
-        <div class="accordion-item" id="section7">
-            <a href="#section7" class="accordion-label">
-                How do I update my payment information?
-            </a>
-            <div class="accordion-content">
-                <p>Select Account on the navigation bar at the bottom then select Payment Information. To remove your current payment method(s), select Saved Cards then the payment method you would like to remove by selecting Yes. To add a card to your account, select Add Card.</p>
-            </div>
-        </div>
-        <div class="accordion-item" id="section8">
-            <a href="#section8" class="accordion-label">
-                Are receipts avaliable for my purchases?
-            </a>
-            <div class="accordion-content">
-                <p>Yes. You can view your recepits on the app. Select Account on the navigation bar at the bottom then select Purchase History.</p>
-            </div>
-        </div>
-        <div class="accordion-item" id="section9">
-            <a href="#section9" class="accordion-label">
-                Can I refund a purchased ticket or pass?
-            </a>
-            <div class="accordion-content">
-                <p>Refunds are available for all tickets and passes. You will be given only 3 minutes to refund your purchase. To refund your ticket or pass, find the fare you would like to refund in My Tickets and then click on it and select Refund.</p>
-            </div>
-        </div>
-        <div class="accordion-item" id="section10">
-            <a href="#section10" class="accordion-label">
-                How do I know when my ticket or pass will expire?
-            </a>
-            <div class="accordion-content">
-                <p>In My Tickets, under each fare, there is an expiration date and time listed.</p>
-            </div>
-        </div>
-        <div class="accordion-item" id="section11">
-            <a href="#section11" class="accordion-label">
-                How do I activate my ticket or pass?
-            </a>
-            <div class="accordion-content">
-                <p>Your ticket or pass will automatically activate when scanned.</p>
-            </div>
-        </div>
-        <div class="accordion-item" id="section12">
-            <a href="#section12" class="accordion-label">
-                How do I display my ticket?
-            </a>
-            <div class="accordion-content">
-                <p>Select My Tickets at the bottom of the navigation bar and tap on the fare you would like to use.</p>
-            </div>
-        </div>
-    </div>
+    </body>
 </section>
 
 <style>
