--- a/TransitHub/Views/Settings/Index.cshtml
+++ b/TransitHub/Views/Settings/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@*
+@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
@@ -11,10 +11,10 @@
             <a href="/Account">
                 <div style="display:flex;justify-content:center;align-items:center;font-size:20px">Account</div><br />
             </a>
-            <a href="/PaymentInformation">
+            <a href="/Home">
                 <div style="display:flex;justify-content:center;align-items:center;font-size:20px">Payment Information</div><br />
             </a>
-            <a href="/PurchaseReceipts">
+            <a href="/Receipts">
                 <div style="display:flex;justify-content:center;align-items:center;font-size:20px">Purchase Receipts</div><br />
             </a>
             <a href="/Verification">
@@ -33,75 +33,6 @@
         </div>
     </div>
 </body>
-
-
-<!--
-<div class="text-center">
-    <div class="centered">
-        <div id="text" style="display: block">
-            <ul style="list-style-type: none;">
-                <li> <a data-toggle="tab" href="#account">Account</a></li>
-                <li> <a data-toggle="tab" href="#security">Security</a></li>
-                <li> <a data-toggle="tab" href="#paymentInformation">Payment Information</a></li>
-                <li> <a data-toggle="tab" href="#purchaseReceipts">Purchase Receipts</a></li>
-                <li> <a data-toggle="tab" href="#verification">Verification</a></li>
-            </ul>
-        </div>
-    </div>
-
-        <div class="tab-content">
-            <div id="paymentInformation" class="tab-pane fade">
-                <div class="heading">
-                    <h1>Confirm Purchase</h1>
-                </div>
-                <div class="payment">
-                    <form>
-                        <div class="form-group owner">
-                            <label for="owner">Owner</label>
-                            <input type="text" class="form-control" id="owner">
-                        </div>
-                        <div class="form-group CVV">
-                            <label for="cvv">CVV</label>
-                            <input type="text" class="form-control" id="cvv">
-                        </div>
-                        <div class="form-group" id="card-number-field">
-                            <label for="cardNumber">Card Number</label>
-                            <input type="text" class="form-control" id="cardNumber">
-                        </div>
-                        <div class="form-group" id="expiration-date">
-                            <label>Expiration Date</label>
-                            <select>
-                                <option value="01">January</option>
-                                <option value="02">February </option>
-                                <option value="03">March</option>
-                                <option value="04">April</option>
-                                <option value="05">May</option>
-                                <option value="06">June</option>
-                                <option value="07">July</option>
-                                <option value="08">August</option>
-                                <option value="09">September</option>
-                                <option value="10">October</option>
-                                <option value="11">November</option>
-                                <option value="12">December</option>
-                            </select>
-                            <select>
-                                <option value="16"> 2016</option>
-                                <option value="17"> 2017</option>
-                                <option value="18"> 2018</option>
-                                <option value="19"> 2019</option>
-                                <option value="20"> 2020</option>
-                                <option value="21"> 2021</option>
-                            </select>
-                        </div>
-                        <div class="form-group" id="pay-now">
-                            <button type="submit" class="btn btn-default" id="confirm-purchase">Confirm</button>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
--->
 
 <style>
     * {
@@ -176,5 +107,3 @@
         text-align: center;
     }
 </style>
-
-
