redesign store, cart, payment information pages

--- a/TransitHub/Views/Store/Index.cshtml
+++ b/TransitHub/Views/Store/Index.cshtml
@@ -147,6 +147,9 @@
                     </tr>
                 </table>
             </div>
+            <br />
+            <input type="button" value="Add to Cart $XX.XX" />
+          
         </div>
     </div>
 </div>
