login basic layout

--- a/TransitHub/Views/Help/Index.cshtml
+++ b/TransitHub/Views/Help/Index.cshtml
@@ -38,7 +38,7 @@
                 </a>
                 <div class="accordion-content">
                     <p>
-                        The application is available for iOS and Andriod devices.
+                        The application is available for iOS and Android devices.
                     </p>
                 </div>
             </div>
