--- a/TransitHubXAML/signUpPage.xaml
+++ b/TransitHubXAML/signUpPage.xaml
@@ -1,11 +1,13 @@
-﻿<Window x:Class="TransitHubXAML.signUp"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:TransitHubXAML"
-        mc:Ignorable="d"
-        Title="signUp" Height="800" Width="450">
+﻿<Page x:Class="TransitHubXAML.signUpPage"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:local="clr-namespace:TransitHubXAML"
+      mc:Ignorable="d" 
+      d:DesignHeight="800" d:DesignWidth="450"
+      Title="signUpPage">
+
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="30"/>
@@ -23,12 +25,12 @@
         </Grid.RowDefinitions>
         <TextBlock Grid.Column="1" Grid.Row="1" FontSize="30" Grid.ColumnSpan="2" Margin="68,0,65,0" Text="Create An Account"/>
         <Label Content="First Name" Grid.Column="2" HorizontalAlignment="Left" Margin="10,37,0,0" Grid.Row="4" VerticalAlignment="Top" Height="44" Width="173" FontSize="22"/>
-        <TextBox Grid.Column="2" HorizontalAlignment="Left" Height="42" Margin="17,74,0,0" Grid.Row="4" TextWrapping="Wrap" VerticalAlignment="Top" Width="166"/>
+        <TextBox Grid.Column="2" HorizontalAlignment="Left" Height="42" Margin="17,74,0,0" Grid.Row="4" TextWrapping="Wrap" VerticalAlignment="Top" Width="166" FontSize="22"/>
         <TextBox Grid.Column="2" HorizontalAlignment="Left" Height="42" Margin="17,502,0,0" Grid.Row="4" TextWrapping="Wrap" VerticalAlignment="Top" Width="354"/>
-        <Button Content="Sign Up" HorizontalAlignment="Left" Margin="18,567,0,0" VerticalAlignment="Top" Width="354" Height="49" FontSize="22" Background="#FFC43A3F" Foreground="White" Grid.Column="2" Grid.Row="4"/>
+        <Button Content="Sign Up" Click="SignUp_Click " HorizontalAlignment="Left" Margin="18,567,0,0" VerticalAlignment="Top" Width="354" Height="49" FontSize="22" Background="#FFC43A3F" Foreground="White" Grid.Column="2" Grid.Row="4"/>
         <Label Content="Confirm Password" Grid.Column="2" HorizontalAlignment="Left" Margin="11,466,0,0" Grid.Row="4" VerticalAlignment="Top" Height="44" Width="249" FontSize="24"/>
-        <Image Grid.Column="2" HorizontalAlignment="Left" Height="40" Grid.Row="1" VerticalAlignment="Top" Width="69" Source="Resources/back-arrow.png"/>
-        <TextBox Grid.Column="2" HorizontalAlignment="Left" Height="42" Margin="192,74,0,0" Grid.Row="4" TextWrapping="Wrap" VerticalAlignment="Top" Width="179"/>
+        <Image Grid.Column="2" MouseDown="Back_Click" HorizontalAlignment="Left" Height="40" Grid.Row="1" VerticalAlignment="Top" Width="69" Source="Resources/back-arrow.png"/>
+        <TextBox Grid.Column="2" HorizontalAlignment="Left" Height="42" Margin="192,74,0,0" Grid.Row="4" TextWrapping="Wrap" VerticalAlignment="Top" Width="179" FontSize="22"/>
         <Label Content="Last Name" Grid.Column="2" HorizontalAlignment="Left" Margin="188,37,0,0" Grid.Row="4" VerticalAlignment="Top" Height="44" Width="173" FontSize="22"/>
         <ComboBox Style="{StaticResource {x:Static ToolBar.ComboBoxStyleKey}}" Grid.Column="2" HorizontalAlignment="Left" Height="43" Margin="17,158,0,0" Grid.Row="4" VerticalAlignment="Top" Width="166" BorderBrush="#FFABADB3" FontSize="22">
             <ComboBoxItem IsSelected="True">Month</ComboBoxItem>
@@ -46,4 +48,4 @@
         <TextBox Grid.Column="2" HorizontalAlignment="Left" Height="42" Margin="18,419,0,0" Grid.Row="4" TextWrapping="Wrap" VerticalAlignment="Top" Width="354"/>
         <Label Content="Birthday" Grid.Column="2" HorizontalAlignment="Left" Margin="10,121,0,0" Grid.Row="4" VerticalAlignment="Top" Height="44" Width="173" FontSize="22"/>
     </Grid>
-</Window>
+</Page>
