--- a/TransitHubXAML/storePage.xaml
+++ b/TransitHubXAML/storePage.xaml
@@ -14,47 +14,67 @@
                 <Canvas>
                     <Rectangle Fill="#B83A3F" Height="7" Stroke="Black" Width="472" Canvas.Left="-18"/>
                     <Label Content="Adult Ticket" Height="39" Canvas.Top="39" Width="138" Canvas.Left="10" FontSize="24"/>
-                    <Label Content="For passengers age 18 and older" FontSize="16" Canvas.Left="10" Canvas.Top="78" />
+                    <Label Foreground="Blue" Tag="For passengers age 18 and older" FontSize="16" Canvas.Left="10" Canvas.Top="78">
+                        <TextBlock TextDecorations="Underline"  Text="{Binding Path=Tag, 
+                              RelativeSource={RelativeSource Mode=FindAncestor,
+                                                             AncestorType={x:Type Label}}}"></TextBlock>
+                    </Label>
                     <Label Content="$3.50" FontSize="24" Canvas.Left="10" Canvas.Top="109" />
-                    <Label Content="0" FontSize="24" Canvas.Left="325" Canvas.Top="87" />
-                    <Button HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Content="-" Height="51" Width="50" Canvas.Left="255" Canvas.Top="78" FontSize="35"/>
-                    <Button HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Content="+" Height="51" Width="50" Canvas.Left="367" Canvas.Top="78" FontSize="35"/>
+                    <Label Name="adultTicketCount" Content="0" FontSize="24" Canvas.Left="325" Canvas.Top="87" />
+                    <Button Name="adultTicketMinus" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Content="-" Height="51" Width="50" Canvas.Left="255" Canvas.Top="78" FontSize="35" Click="adultTicketMinus_Click"/>
+                    <Button Name="adultTicketPlus" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Content="+" Height="51" Width="50" Canvas.Left="367" Canvas.Top="78" FontSize="35" Click="adultTicketPlus_Click"/>
                     <Label Content="Youth Ticket" Height="39" Canvas.Top="198" Width="138" Canvas.Left="10" FontSize="24"/>
                     <Rectangle Fill="Gray" Height="7" Stroke="Black" Width="472" Canvas.Left="-28" Canvas.Top="156"/>
-                    <Label Content="For passengers ages 6-17" FontSize="16" Canvas.Left="10" Canvas.Top="242" />
+                    <Label Foreground="Blue" Tag="For passengers ages 6-17" FontSize="16" Canvas.Left="10" Canvas.Top="242">
+                        <TextBlock TextDecorations="Underline"  Text="{Binding Path=Tag, 
+                              RelativeSource={RelativeSource Mode=FindAncestor,
+                                                             AncestorType={x:Type Label}}}"></TextBlock>
+                    </Label>
                     <Label Content="$2.40" FontSize="24" Canvas.Left="10" Canvas.Top="278" />
-                    <Button HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Content="-" Height="51" Width="50" Canvas.Left="255" Canvas.Top="242" FontSize="35"/>
-                    <Label Content="0" FontSize="24" Canvas.Left="325" Canvas.Top="247" />
-                    <Button HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Content="+" Height="51" Width="50" Canvas.Left="367" Canvas.Top="242" FontSize="35"/>
+                    <Button Name="youthTicketMinus" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Content="-" Height="51" Width="50" Canvas.Left="255" Canvas.Top="242" FontSize="35" Click="youthTicketMinus_Click"/>
+                    <Label  Name="youthTicketCount" Content="0" FontSize="24" Canvas.Left="325" Canvas.Top="247" />
+                    <Button Name="youthTicketPlus" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Content="+" Height="51" Width="50" Canvas.Left="367" Canvas.Top="242" FontSize="35" Click="youthTicketPlus_Click"/>
                     <Rectangle Fill="Gray" Height="7" Stroke="Black" Width="472" Canvas.Left="-18" Canvas.Top="325"/>
-                    <Button Background="#B83A3F" Foreground="White" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Content="ADD TO CART $0.00" Height="86" Width="389" Canvas.Left="28" Canvas.Top="384" FontSize="35"/>
+                    <Button Name="ticketsAddToCart" Background="#B83A3F" Foreground="White" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Content="ADD TO CART $0.00" Height="86" Width="389" Canvas.Left="28" Canvas.Top="384" FontSize="35" Click="ticketsAddToCart_Click"/>
                 </Canvas>
             </TabItem>
 
-            <TabItem Header="PASSES" FontSize="59" Margin="6,0,-17,-2">
+            <TabItem Header="PASSES" FontSize="59" Margin="6,0,-27,-2">
                 <Canvas>
                     <Rectangle Fill="#B83A3F" Height="7" Stroke="Black" Width="472" Canvas.Left="-18"/>
                     <Label Content="Adult Monthly Pass" Height="39" Canvas.Top="12" Width="240" Canvas.Left="10" FontSize="24"/>
-                    <Label Content="Additional Information Here" FontSize="16" Canvas.Left="10" Canvas.Top="56" />
+                    <Label Foreground="Blue" Tag="Additional Information Here" FontSize="16" Canvas.Left="10" Canvas.Top="56">
+                        <TextBlock TextDecorations="Underline"  Text="{Binding Path=Tag, 
+                              RelativeSource={RelativeSource Mode=FindAncestor,
+                                                             AncestorType={x:Type Label}}}"></TextBlock>
+                    </Label>
                     <Label Content="$109.00" FontSize="24" Canvas.Left="10" Canvas.Top="87" />
-                    <Label Content="0" FontSize="24" Canvas.Left="325" Canvas.Top="65" />
-                    <Button HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Content="-" Height="51" Width="50" Canvas.Left="255" Canvas.Top="56" FontSize="35"/>
-                    <Button HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Content="+" Height="51" Width="50" Canvas.Left="367" Canvas.Top="56" FontSize="35"/>
+                    <Label Name="adultMonthlyCount" Content="0" FontSize="24" Canvas.Left="325" Canvas.Top="65" />
+                    <Button Name="adultMonthlyMinus" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Content="-" Height="51" Width="50" Canvas.Left="255" Canvas.Top="56" FontSize="35" Click="adultMonthlyMinus_Click"/>
+                    <Button Name="adultMonthlyPlus" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Content="+" Height="51" Width="50" Canvas.Left="367" Canvas.Top="56" FontSize="35" Click="adultMonthlyPlus_Click"/>
                     <Label Content="Youth Monthly Pass" Height="39" Canvas.Top="146" Width="240" Canvas.Left="10" FontSize="24"/>
                     <Rectangle Fill="Gray" Height="7" Stroke="Black" Width="472" Canvas.Left="-28" Canvas.Top="134"/>
-                    <Label Content="Additional Information Here" FontSize="16" Canvas.Left="10" Canvas.Top="190" />
+                    <Label Foreground="Blue" Tag="Additional Information Here" FontSize="16" Canvas.Left="10" Canvas.Top="190">
+                        <TextBlock TextDecorations="Underline"  Text="{Binding Path=Tag, 
+                              RelativeSource={RelativeSource Mode=FindAncestor,
+                                                             AncestorType={x:Type Label}}}"></TextBlock>
+                    </Label>
                     <Label Content="$79.00" FontSize="24" Canvas.Left="10" Canvas.Top="221" />
-                    <Button HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Content="-" Height="51" Width="50" Canvas.Left="255" Canvas.Top="186" FontSize="35"/>
-                    <Label Content="0" FontSize="24" Canvas.Left="325" Canvas.Top="195" />
-                    <Button HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Content="+" Height="51" Width="50" Canvas.Left="367" Canvas.Top="186" FontSize="35"/>
+                    <Button Name="youthMonthlyMinus" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Content="-" Height="51" Width="50" Canvas.Left="255" Canvas.Top="186" FontSize="35" Click="youthMonthlyMinus_Click"/>
+                    <Label Name="youthMonthlyCount" Content="0" FontSize="24" Canvas.Left="325" Canvas.Top="195" />
+                    <Button Name="youthMonthlyPlus" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Content="+" Height="51" Width="50" Canvas.Left="367" Canvas.Top="186" FontSize="35" Click="youthMonthlyPlus_Click"/>
                     <Rectangle Fill="Gray" Height="7" Stroke="Black" Width="472" Canvas.Top="268"/>
-                    <Button Background="#B83A3F" Foreground="White" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Content="ADD TO CART $0.00" Height="86" Width="389" Canvas.Left="28" Canvas.Top="485" FontSize="35"/>
+                    <Button Name="passesAddToCart" Background="#B83A3F" Foreground="White" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Content="ADD TO CART $0.00" Height="86" Width="389" Canvas.Left="28" Canvas.Top="485" FontSize="35" Click="passesAddToCart_Click"/>
                     <Label Content="Low Income Pass" Height="39" Canvas.Top="280" Width="240" Canvas.Left="10" FontSize="24"/>
-                    <Label Content="Additional Information Here" FontSize="16" Canvas.Left="10" Canvas.Top="324" />
+                    <Label Foreground="Blue" Tag="Additional Information Here" FontSize="16" Canvas.Left="10" Canvas.Top="324">
+                        <TextBlock TextDecorations="Underline"  Text="{Binding Path=Tag, 
+                              RelativeSource={RelativeSource Mode=FindAncestor,
+                                                             AncestorType={x:Type Label}}}"></TextBlock>
+                    </Label>
                     <Label Content="$38.15" FontSize="24" Canvas.Left="10" Canvas.Top="360" />
-                    <Button HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Content="-" Height="51" Width="50" Canvas.Left="255" Canvas.Top="324" FontSize="35"/>
-                    <Label Content="0" FontSize="24" Canvas.Left="325" Canvas.Top="324" />
-                    <Button HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Content="+" Height="51" Width="50" Canvas.Left="367" Canvas.Top="324" FontSize="35"/>
+                    <Button Name="lowIncomeMonthlyMinus" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Content="-" Height="51" Width="50" Canvas.Left="255" Canvas.Top="324" FontSize="35" Click="lowIncomeMonthlyMinus_Click"/>
+                    <Label Name="lowIncomeCount" Content="0" FontSize="24" Canvas.Left="325" Canvas.Top="324" />
+                    <Button Name="lowIncomeMonthlyPlus" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Content="+" Height="51" Width="50" Canvas.Left="367" Canvas.Top="324" FontSize="35" Click="lowIncomeMonthlyPlus_Click"/>
                     <Rectangle Fill="Gray" Height="8" Stroke="Black" Width="472" Canvas.Top="438"/>
                 </Canvas>
             </TabItem>
